client-side/src/app/components/section/section.component.scss
@use '@pepperi-addons/ngx-lib/src/core/style/abstracts/variables';
@use '../../../mixins.scss';

.section-container {
    position: relative;
    display: grid;
    //height: inherit;
    // fill height task
    height: 100%;
    max-height: inherit;
    min-height: variables.$draggable-item-height;

    // &.mobile {
    //     display: block;
    // }
     
    // This css is only for edit mode!!!
    &.editable-state {
        &.default-height {
            min-height: 16rem;
        }

        &.active-section {
            z-index: mixins.$z-index-min + 11;
        }
        
        // The placeholder of the drop area when dragging a section.
        &.cdk-drag-placeholder {
            opacity: 0.5;
        }

        // When hovering on section show the tool bar except from the placeholder of the drop area.
        &:not(.cdk-drag-placeholder) {
            &:hover,
            &.show-hover-state {
                .section-toolbar {
                    display: block !important;
                }
            }
        }
        
        // (.cdk-drag-preview) is the current dragging section so hide the tool bar except for the current dragging section.
        &:not(.cdk-drag-preview) {
            .hide-toolbar {
                display: none;
            }
        }
        
        .section-toolbar {
            position: absolute;
            top: calc(#{variables.$draggable-item-height} * -1 + #{mixins.$border-width} * -1);
            height: calc(#{variables.$draggable-item-height} + #{mixins.$border-width});
            z-index: variables.$z-index-medium;

            ::ng-deep.pep-draggable-item-container {
                border-radius: variables.$border-radius-md variables.$border-radius-md 0 0;
            }
        }
            
        .section-background {
            position: absolute;
            width: 100%;
            height: 100%;
            z-index: mixins.$z-index-min;
            display: grid;
            grid-template-columns: repeat(12, 1fr);

            .back-template {
                opacity: 0.1;

                &:last-of-type {
                    border-right: 0 none;
                }
            }
        }

        .columns-wrapper {
            .section-column {
                z-index: mixins.$z-index-min + 1;
                
                &.active-column {
                    z-index: mixins.$z-index-min + 12;
                    position: relative;
                }
            }
        }
    }

    // This css is run in edit mode and also without edit mode!!!
    .columns-wrapper {
        display: grid;
        grid-auto-flow: column;
        height: inherit;
        max-height: inherit;
        
        // &.mobile {
        //     display: block;
        // }
        
        @include mixins.gap-sizes();
        
        .section-column {
            position: relative;
            height: inherit;
            max-height: inherit;
            overflow: inherit; 
            // changed from auto to visible for the shadow
            // then to hidden for the section max-width issue
            // change back to inherit for the shadow
            .section-block {
                height: inherit;
                max-height: inherit;
            }
        }
    }
}

